respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Quote_Item_Line__c.object
<CustomObject>
    <description>Specifies items to be transported as part of an Import-Export to generate Shipment Cargo Lines.</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Import_Export_Quote__r.Account_for__r.Owner.FirstName &amp; &quot; &quot;&amp;Import_Export_Quote__r.Account_for__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Customer__c</fullName>
        <formula>Import_Export_Quote__r.Account_for__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Customer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Import_Taxes_Amount__c</fullName>
        <label>Additional Import Taxes Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Import_Taxes_Detail__c</fullName>
        <label>Additional Import Taxes Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Conversion to currency of &quot;Units&quot; x &quot;Price&quot;</description>
        <formula>Units__c  *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Units&quot; x &quot;Price&quot;</inlineHelpText>
        <label>Origin Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CE_Descripcion_de_Producto_PAK__c</fullName>
        <inlineHelpText>Descripción del producto adicional al que se coloca en carta porte</inlineHelpText>
        <label>Descripción de Producto (PAK)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CE_Descripcion_de_Uso__c</fullName>
        <label>Descripción de Uso</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CP_Fraccion_Arancelaria_IE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fracción Arancelaria</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Fraccion Arancelaria</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines (Fracción Arancelaria)</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_DC_Value__c</fullName>
        <label>Category DC Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges_Assig_Duty_Dest_Sell_Amount__c</fullName>
        <description>(&quot;Imp-Exp Fees&quot; + &quot;Duty&quot;) / &quot;Total Destination Amount&quot;</description>
        <formula>( Imp_Exp_Fees_assigned__c + Duty__c ) / Total_Destination_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(&quot;Imp-Exp Fees&quot; + &quot;Duty&quot;) / &quot;Total Destination Amount&quot;</inlineHelpText>
        <label>%(Charges Assig+Duty) / Dest Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Clave_de_Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clave de Servicio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Productos y Servicios cP</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines (Clave de Servicio)</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Consolidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Type</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Currency Header</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customs_Value__c</fullName>
        <label>Customs Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controlled by Shipments deliveries.</inlineHelpText>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Sell_Amount_header_currency__c</fullName>
        <formula>Total_Destination_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Sell Amount(header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursement_Outstanding_Balance__c</fullName>
        <description>&quot;Origin Buy Amount&quot; - &quot;Total Amount Allocated On Disbursements&quot;</description>
        <formula>Origin_Buy_Amount__c - Total_Amount_Allocated_On_Disbursements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Origin Buy Amount&quot; - &quot;Total Amount Allocated On Disbursements&quot;</inlineHelpText>
        <label>Disbursement Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duty_header_currency__c</fullName>
        <formula>Duty__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duty (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETD__c</fullName>
        <label>ETD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify Item Name first</inlineHelpText>
        <label>E-Commerce Offer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>E_Commerce_Offer__c.Item_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>E_Commerce_Offer__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Quote_Item_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Embalaje_Cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Precisa la clave del tipo de embalaje que se requiere para transportar el material o residuo peligroso.</description>
        <inlineHelpText>Precisa la clave del tipo de embalaje que se requiere para transportar el material o residuo peligroso.</inlineHelpText>
        <label>Embalaje</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tipo de Embalaje</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines (Embalaje)</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Concept__c</fullName>
        <label>Expense Concept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extension_Item_Name__c</fullName>
        <label>Extension Item Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Quote_Item_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Code__c</fullName>
        <label>HS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HazardousCL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valida material peligroso para ser identificado en Carta Porte</description>
        <label>Hazardous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEQuotation_Status__c</fullName>
        <formula>text(Import_Export_Quote__r.Quotation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imp_Exp_Charges_Assigned_copy__c</fullName>
        <label>Imp-Exp Charges Assigned (copy)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Imp_Exp_Fees_assigned__c</fullName>
        <description>Conversion to currency of product between ratio of; if Quote&apos;s/Order&apos;s &quot;Total Volume (m3)&quot; not 0 then ratio of &quot;Total Shipping Volume (m3)&quot; to Quote&apos;s/Order&apos;s &quot;Total Volume (m3)&quot;, else if Quote/Order &quot;Total Weight (Kg)&quot; not 0 then ratio of &quot;Total Shipping Weight (Kg)&quot; to Quote&apos;s/Order&apos;s &quot;Total Weight (Kg)&quot;; and Quote&apos;s/Order&apos;s &quot;Total Sell Amount&quot; to &quot;Conversion Rate to Currency Header&quot; ratio.Roll-Up from Imp-Exp Charges Assigned</description>
        <formula>IF(  Import_Export_Quote__r.Total_Volume_m3_2__c &lt;&gt;0, Total_Shipping_Volume_m3__c/ Import_Export_Quote__r.Total_Volume_m3_2__c ,IF(Import_Export_Quote__r.Total_Weight_Kg2__c&lt;&gt;0,Total_Shipping_Weight_Kgs__c / Import_Export_Quote__r.Total_Weight_Kg2__c,null) )* Import_Export_Quote__r.Total_Services_Sell_Amount_number__c / Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Imp-Exp Charges Assigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote__c</fullName>
        <label>Import-Export Quote</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Items_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Customs Incoterm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Outstanding_Balance__c</fullName>
        <description>Conversion to currency of &quot;Amount&quot; - &quot;Invoiced Amount&quot;</description>
        <formula>Amount__c - Invoiced_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Amount&quot; - &quot;Invoiced Amount&quot;</inlineHelpText>
        <label>Invoice Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <summarizedField>Import_Export_Item_Line_Invoice__c.Amount_Allocated_Cargo_Line_Currency__c</summarizedField>
        <summaryForeignKey>Import_Export_Item_Line_Invoice__c.Import_Export_Item_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <description>Specifies item reference code as specified on the Item Name</description>
        <formula>Item_Name__r.Sourcing_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Freight_Class__c</fullName>
        <formula>TEXT(Item_Name__r.Freight_Class__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Height__c</fullName>
        <formula>Item_Name__r.Master_Box_Height_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Height(cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Lenght_cm__c</fullName>
        <formula>Item_Name__r.Master_Box_Length_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Lenght(cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_List_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies Item Price per CILISTP Code</description>
        <inlineHelpText>Specify Item Name first</inlineHelpText>
        <label>Item List Price</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item_List_Price__c.Item_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_List_Price__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_NMFC__c</fullName>
        <formula>Item_Name__r.NMFC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMFC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Name</label>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <formula>Item_Name__r.Item_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Item Price&quot; as specified on Item Name</inlineHelpText>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Supplier_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Supplier/Owner</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier, Customer, Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Quote_Item_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Units_x_Packaging__c</fullName>
        <description>&quot;Item Units x Packaging&quot; as stated in Supplier Quote Line</description>
        <formula>Supplier_Quote_Line__r.Item_Units_x_Packaging__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Item Units x Packaging&quot; as stated in Supplier Quote Line</inlineHelpText>
        <label>Item Units x Packaging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Volume_m3__c</fullName>
        <formula>Item_Name__r.Master_Box_Volume_m3__c</formula>
        <label>Item Volume(m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Width_cm__c</fullName>
        <formula>Item_Name__r.Master_Box_Width_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Width(cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Item_List_Price__r.List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;List Price&quot; as stated on Item List Price</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>1- (&quot;Origin Buy Amount&quot; / &quot;Amount&quot;)</description>
        <formula>1-(Origin_Buy_Amount__c/ Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1- (&quot;Origin Buy Amount&quot; / &quot;Amount&quot;)</inlineHelpText>
        <label>Margin at Origin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_at_Destination__c</fullName>
        <label>Margin at Destination</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material_Peligroso_Cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Precisa la clave del tipo de material peligroso que se transporta.</description>
        <inlineHelpText>Precisa la clave del tipo de material peligroso que se transporta.</inlineHelpText>
        <label>Material Peligroso</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Material Peligroso</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines (Material Peligroso)</relationshipLabel>
        <relationshipName>Import_Export_Cargo_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <description>Specifies amount offered in E-Commerce Offer</description>
        <formula>E_Commerce_Offer__r.Offer_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_Buy_Amount__c</fullName>
        <description>Conversion to currency of (&quot;Unit Origin Buy Price&quot; x &quot;Units&quot;) + &quot;Expense Amount&quot;, from Origin Buy Amount Roll-Up</description>
        <formula>(Unit_Origin_Buy_Price__c * Units__c) + Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(&quot;Unit Origin Buy Price&quot; x &quot;Units&quot;) + &quot;Expense Amount&quot;</inlineHelpText>
        <label>Origin Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_Buy_Amount_header__c</fullName>
        <formula>Origin_Buy_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <label>Origin Buy Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Origin_Sell_Amount_header_currency__c</fullName>
        <formula>Amount__c*Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Sell Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Description__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Gross_Weight_kg__c</fullName>
        <description>&quot;Packaging Gross Weight (kg)&quot; as stated on &quot;Supplier Quote Line&quot;</description>
        <formula>Supplier_Quote_Line__r.Packaging_Gross_Weight_kg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Packaging Gross Weight (kg)&quot; as stated on &quot;Supplier Quote Line&quot;</inlineHelpText>
        <label>Packaging Gross Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Height_cm__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Height_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Height (cm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Length_cm__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Length_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Length (cm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Quantity__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Volume_m3__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Volume_m3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Volume (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Weight_kg__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Weight_kg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Weight (kg)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Width_cm__c</fullName>
        <formula>Supplier_Quote_Line__r.Packaging_Width_cm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Width (cm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Code__c</fullName>
        <label>Pallet Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pedimento__c</fullName>
        <label>Pedimento</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Duty__c</fullName>
        <label>Percent Duty</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Taxes__c</fullName>
        <label>Percent Taxes</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Peso_Neto__c</fullName>
        <label>Peso Neto (KG)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Pick &amp; Ship control</inlineHelpText>
        <label>Picked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Unit Origin Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Item_DC_Value__c</fullName>
        <label>Product Item DC Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Item_DC__c</fullName>
        <label>Product Item DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Time_Days_Form__c</fullName>
        <description>&quot;Production Time (Days)&quot; as specified in Supplier Quote Line</description>
        <formula>Supplier_Quote_Line__r.Production_Time_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Production Time (Days)&quot; as specified in Supplier Quote Line</inlineHelpText>
        <label>Production Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify Field Order first</inlineHelpText>
        <label>Field Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shopping_Cart_line__c.Shopping_Cart__c</field>
                <operation>equals</operation>
                <valueField>$Source.Shopping_Cart__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shopping_Cart_line__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Shopping_Cart_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Order</label>
        <referenceTo>Shopping_Cart__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcategory_DC_Value__c</fullName>
        <label>Subcategory DC Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory_DC__c</fullName>
        <label>Subcategory DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subfamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify Family first</inlineHelpText>
        <label>Subfamily</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Subfamily__c.Product_Family__c</field>
                <operation>equals</operation>
                <valueField>$Source.Family__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Subfamily__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Quote_Item_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Item_Weight_kg__c</fullName>
        <formula>Supplier_Quote_Line__r.Supplier_Item_Weight_kg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Item Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specify Supplier Quote first</inlineHelpText>
        <label>Supplier Quote/Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier_Quote_Line__c.Supplier_Quote__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier_Quote__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Quote_Line__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Quote</label>
        <referenceTo>Supplier_Quote__c</referenceTo>
        <relationshipLabel>Import-Export Cargo Lines</relationshipLabel>
        <relationshipName>Import_Export_Items_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Total_Volume_m3__c</fullName>
        <formula>Supplier_Quote_Line__r.Supplier_Total_Volume_m3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Total Volume (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Total_Weight_kg__c</fullName>
        <description>If Supplier Quote Line&apos;s &quot;Supplier Total Weight (kg)&quot; greater than 0 then Supplier Quote Line&apos;s &quot;Supplier Total Weight (kg)&quot;, else 0</description>
        <formula>IF(Supplier_Quote_Line__r.Supplier_Total_Weight_kg__c &gt;0,Supplier_Quote_Line__r.Supplier_Total_Weight_kg__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Supplier Total Weight (kg)&quot; as specified on Supplier Quote Line</inlineHelpText>
        <label>Supplier Total Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEUS__c</fullName>
        <label>TEUS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperatura__c</fullName>
        <label>Temperatura</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Allocated_On_Disbursements__c</fullName>
        <label>Total Amount Allocated On Disbursements</label>
        <summarizedField>Import_Export_Cargo_Line_Disbursement__c.Amount_Allocated_Cargo_Line_Currency__c</summarizedField>
        <summaryForeignKey>Import_Export_Cargo_Line_Disbursement__c.Import_Export_Cargo_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Disbursement_Currency_Hea__c</fullName>
        <formula>Total_Amount_Allocated_On_Disbursements__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Disbursement (Currency Hea)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>